SQuirreL SQL Client Change Log
==============================

Not yet released, available in our GIT repository and in future snapshots and releases.
===============================================================================================

Enhancements:

#555 New features for code completion needed --> Completion for UDTs
  UDT names are now available in code completion and can be configured in the Alias Properties dialog.
  Note: If you find UDTs are not of use in code completion you can switch it off.
        See menu File --> New Session Properties --> Tab 'Code completion' --> Checkbox at bottom.


The new paste history can be called using ctrl+shift+V oder ctrl+shift+insert. It offers to paste
  the content of former copy or cut actions.

Enhancement of feature request #545: New table right mouse menu 'Copy as markdown table'

The minimum number of decimal digits of floating point numbers can now be defined
  (see menu File --> Global Preferences --> Tab 'Data Type Controls --> section 'FLOAT, REAL, ...')
 Thanks to Krzysztof Szymko for the patch.


The limit string loading size option (see menu File --> Global Preferences --> Tab 'Data Type Controls --> section 'CHAR, VARCHAR, ...')
  used to work for the Object tree only and now works for SQLs too.
  Furthermore limited strings are now indicated by the ending '...'.
 Thanks to Krzysztof Szymko for the patch.


Table types shown in Object tree can now be filtered, see menu File --> New Session Properties --> tab Object tree --> section Filters

#470 New global preference to auto-save current SQL commands into file at exit and auto-reload them at startup into SQL editor pane.
  See menu File --> Global Preferences --> Tab SQL --> Check box --> Section General
 Thanks to Krzysztof Szymko for the patch.


The Logs window now remembers its size.


Dataimport Plugin:
 - Improved messaging
 - Table refresh after import
 Thanks to Krzysztof Szymko for the patch.

