@@ -364,6 +364,10 @@ action.net.sourceforge.squirrel_sql.client.session.action.CloseAllSQLResultWindo
 action.net.sourceforge.squirrel_sql.client.session.action.CloseAllSQLResultWindowsAction.name=Close all SQL Result Windows
 action.net.sourceforge.squirrel_sql.client.session.action.CloseAllSQLResultWindowsAction.tooltip=Close all SQL Result Windows
 
+action.net.sourceforge.squirrel_sql.client.session.action.ToggleMinimizeResultsAction.image=
+action.net.sourceforge.squirrel_sql.client.session.action.ToggleMinimizeResultsAction.name=Toggle minimize results
+action.net.sourceforge.squirrel_sql.client.session.action.ToggleMinimizeResultsAction.tooltip=Toggle minimize results
+
 action.net.sourceforge.squirrel_sql.client.session.action.ViewObjectAtCursorInObjectTreeAction.image=
 action.net.sourceforge.squirrel_sql.client.session.action.ViewObjectAtCursorInObjectTreeAction.name=View in Object Tree
 action.net.sourceforge.squirrel_sql.client.session.action.ViewObjectAtCursorInObjectTreeAction.tooltip=View in Object Tree
@@ -849,6 +853,9 @@ menuitem.net.sourceforge.squirrel_sql.client.session.action.ToggleCurrentSQLResu
 
 menuitem.net.sourceforge.squirrel_sql.client.session.action.CloseAllSQLResultWindowsAction.accelerator=control shift W
 menuitem.net.sourceforge.squirrel_sql.client.session.action.CloseAllSQLResultWindowsAction.mnemonic=W
+
+menuitem.net.sourceforge.squirrel_sql.client.session.action.ToggleMinimizeResultsAction.accelerator=control shift M
+menuitem.net.sourceforge.squirrel_sql.client.session.action.ToggleMinimizeResultsAction.mnemonic=M
 
 menuitem.net.sourceforge.squirrel_sql.client.session.action.ViewObjectAtCursorInObjectTreeAction.accelerator=control B
 menuitem.net.sourceforge.squirrel_sql.client.session.action.ViewObjectAtCursorInObjectTreeAction.mnemonic=V
